Fix: Don't remove common labels when editing the tags of multiple tracks

When editing the tags of multiple tracks without editing the labels, common labels would be removed.

BUG: 316043
FIXED-IN: 2.8